<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosxbeepy</name>
  <version>0.0.1</version>
  <description>A ROS2 wrapper for xbee devices using digi-xbee python API</description>
  <maintainer email="sudharsansci@gmail.com">Sudharsan</maintainer>
  <url>http://wiki.ros.org/ROSXBeepy</url>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
